# opticall

./: .env  .gitignore  README.md  pyproject.toml  tree.txt
opticall/: .env_cp  __main__.py
opticall/application/: __init__.py
opticall/application/routes/: __init__.py  auth.py  forecasting.py  home.py  monitoring.py  reports.py  scheduling.py  self_service.py  shared.py  shifts.py
opticall/application/routes/api/: auth.py
opticall/application/routes/api/auth/autenticacion/: login_route.py
opticall/application/routes/app/: auth.py  forecasting.py  monitoring.py  shared.py  shifts.py
opticall/application/static/assets/css/: custom.css  material-dashboard.min.css.css
opticall/application/templates/_layouts/authentication/: index.layout.html
opticall/application/templates/_layouts/default/: index.layout.html
opticall/application/templates/_layouts/default/partials/: aside.partial.html  (+3 more)
opticall/application/templates/auth/: login.html
opticall/application/templates/forecasting/: configure.html  forecast.html
opticall/application/templates/home/: index.html
opticall/application/templates/self_service/: schedule.html
opticall/config/: config.py
opticall/doc/: autenticacion.md  perfiles.md
opticall/src/shared/services/: avatarSVG.py  avatar_service.py  database.py
resources/: database.sql
test/src/auth/modules/perfiles/: conftest.py  test_change_profile_status_use_case.py  test_create_profile_use_case.py  test_delete_profile_use_case.py  test_get_profile_use_case.py  test_list_profiles_use_case.py  test_update_profile_use_case.py
(+50 files in other folders)
